...
    val scheme = MaterialTheme.colorScheme
    CompositionLocalProvider(
        LocalWhiteNoiseTextFieldContainerColor provides scheme.surfaceContainerLowest,
    ) {
        ModalBottomSheet(
            onDismissRequest = onDismissRequest,
            modifier = modifier.testTag("sheet.surface"),
            sheetState = sheetState,
            containerColor = containerColor ?: scheme.surfaceContainerLow,
            contentColor = scheme.onSurface,
            contentWindowInsets = contentWindowInsets,
            dragHandle = {
                BottomSheetDefaults.DragHandle(Modifier.testTag("sheet.dragHandle"))
...
